Fix overlaping of header items when shrinking

--- a/style.css
+++ b/style.css
@@ -17,10 +17,11 @@ body {
 }
 
 .header {
+    margin: auto;
     display: flex;
-    justify-content: space-between; 
-    padding: 20px 90px;
-    padding-bottom: 0;
+    justify-content: space-between;
+    margin-top: 20px;
+    width: 90vw;
 }
 
 ul {
